etc/kubernetes/manifests/python-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask-deploy
spec:
  selector:
    matchLabels:
      app: python-flask
  replicas: 1
  template:
    metadata:
      labels:
        app: python-flask
    spec:
      containers:
        - name: python-flask-container
          args:
            - pruebas.py
          command:
            - python3
          image: index.docker.io/machacamoya/santander-dockercoins:0.3-rng
          volumeMounts:
            - mountPath: /src/
              name: python-flask-volume
              readOnly: true
            - mountPath: /log/
              name: python-flask-log
              readOnly: false  
          workingDir: /src/
      volumes:
        - name: python-flask-volume
          emptyDir: {}
        - name: python-flask-log
          persistentVolumeClaim: 
            claimName: log-pvc
            readOnly: false
