etc/kubernetes/manifests/python-flask-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-svc
spec:
  selector:
    app: python-flask
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
