etc/kubernetes/manifests/python-flask2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask2-svc
spec:
  selector:
    app: python-flask-v2
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
