etc/kubernetes/manifests/python-flask-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask
  namespace: pcm1
spec:
  host: flask-pcm1.apps-crc.testing
  to:
    kind: Service
    name: python-flask-svc
  port:
    targetPort: 8080
